Add run to Gradle